--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-server.port=9090
+server.port=7070
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+spring.mvc.context.path=/
 spring.datasource.url=jdbc:postgresql://localhost:5432/internship
 spring.datasource.username=postgres
 spring.datasource.password=postgres
